feat: add all sections

--- a/index.html
+++ b/index.html
@@ -6,5 +6,35 @@
     <title>nodasoft</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header class="header">
+        <a href="#overlay" class="header__button">Open pop-up button</a>
+      </header>
+      <div class="first">
+        <div class="first__grid first-grid">
+          <div class="first-grid__item first-grid__1"></div>
+          <div class="first-grid__item first-grid__2"></div>
+          <div class="first-grid__item first-grid__3"></div>
+          <div class="first-grid__item first-grid__4"></div>
+          <div class="first-grid__item first-grid__5"></div>
+        </div>
+      </div>
+      <div class="second">
+        <div class="second__grid second-grid">
+          <div class="second-grid__item second-grid__1"></div>
+          <div class="second-grid__item second-grid__2"></div>
+          <div class="second-grid__item second-grid__3"></div>
+          <div class="second-grid__item second-grid__4"></div>
+        </div>
+      </div>
+      <footer class="footer"></footer>
+    </div>
+    <div id="overlay" class="overlay">
+      <div class="popup">
+        <a class="popup__close" href="#">X</a>
+        <h2 class="popup__title">Pop-up</h2>
+      </div>
+    </div>
+  </body>
 </html>
